--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto"></ul>
         <span class="navbar-text">
-          Humanitarian Needs Overview 2020 | Eithopia
+          Humanitarian Needs Overview 2020 | Ethiopia
         </span>
       </div>
     </nav>
