--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto"></ul>
         <span class="navbar-text">
-          Humanitarian Needs Overview 2020 | Ethiopia
+          Humanitarian Needs Overview 2020 | Eithopia
         </span>
       </div>
     </nav>
@@ -214,6 +214,11 @@
               class="d-flex align-items-center justify-content-between small"
             >
               <div class="text-muted">Copyright &copy; Your Website 2019</div>
+              <div>
+                <a href="#">Privacy Policy</a>
+                &middot;
+                <a href="#">Terms &amp; Conditions</a>
+              </div>
             </div>
           </div>
         </footer>
