--- a/map.html
+++ b/map.html
@@ -123,7 +123,12 @@
             <div
               class="d-flex align-items-center justify-content-between small"
             >
-              <div class="text-muted">Powered By &copy; Your Website 2019</div>
+              <div class="text-muted">Copyright &copy; Your Website 2019</div>
+              <div>
+                <a href="#">Privacy Policy</a>
+                &middot;
+                <a href="#">Terms &amp; Conditions</a>
+              </div>
             </div>
           </div>
         </footer>
