--- a/index.html
+++ b/index.html
@@ -287,9 +287,7 @@
       $(document).ready(function () {
         let min = 999999999;
         let max = 0;
-        d3.csv(
-          "https://docs.google.com/spreadsheets/d/e/2PACX-1vR5PFAh9-ZX5SApvq4mmE2L_am66lQMWfAmveMgLjuQIXSthlvl-MWR5GypgChb_mDyeaFIRK60pg7p/pub?output=csv"
-        ).then(function (bigdata) {
+        d3.csv("data/HNO2020_PIN_ETH.csv").then(function (bigdata) {
           let datatb = [];
           bigdata.forEach(function (d, i) {
             datatb.push([
